--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ layout: author_layout
     <div class="row-center">
         <div class="col-md-7">
             {% if site.data.author.workHistory %}
-                <h3 class="title with-icon"><span class="glyphicon glyphicon-plane cat-title"></span>Work History</h3>
+                <h3 class="title with-icon"><span class="glyphicon glyphicon-plane cat-title"></span>Research History</h3>
                 <ul class="timeline">
                     {% for work in site.data.author.workHistory %}
                         <li class="timeline-inverted">
